--- a/src/App.css
+++ b/src/App.css
@@ -1,29 +1,35 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+.App { 
+  background-color: #FFF;
   min-height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  flex-direction: column;  
   color: white;
+} 
+.header{
+  padding-top: 3px;
+  padding-bottom: 3px;
+  height: 56px;
+  background-color: rgb(13, 13, 13);
+  z-index: 25;
+  transition: width 195ms cubic-bezier(0.4, 0, 0.6, 1) 0ms, margin 195ms cubic-bezier(0.4, 0, 0.6, 1) 0ms;
+  border-bottom: none;
+  top: 0px;
+  left: auto;
+  right: 0px;
+  position: fixed;
+  color: rgb(255, 255, 255);
+  width: 100%;
+  display: flex;
+  box-sizing: border-box;
+  flex-shrink: 0;
+  flex-direction: column;
+  box-shadow: none;
 }
-
+.header > div{
+  font-size: 1.17em;
+  padding: 10px;
+  font-weight: bold;
+}
 .App-link {
   color: #61dafb;
 }
