--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,97 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+:root {
+  --bodybg: #ffffff;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.tremor-DateRangePicker-root > .tremor-DateRangePicker-calendarModal{
+    width: inherit !important;
+}
+/* .tremor-DateRangePicker-dropdownButton{
+    width: 100%;
+    border-radius: 4px;
+    margin-left: 0px;
+} */
+.tremor-DateRangePicker-dropdownModal{
+    display: list-item;
+    column-count: 2;
+}
+.tremor-DropdownItem-root{
+    border-bottom: 0px;
+    border-top: 0px;
+    border-right: 1px solid gainsboro;
+}
+/* @tailwind base; */  /* Removing the base import and manually copied style from tailwindcss site, to resolve SVG being affected by this display:block css over ride */ 
+
+/*
+1. Prevent padding and border from affecting element width. (https://github.com/mozdevs/cssremedy/issues/4)
+2. Allow adding a border to an element by just adding a border-width. (https://github.com/tailwindcss/tailwindcss/pull/116)
+*/
+
+*::-webkit-scrollbar {
+  width: 10px;
+  height: 10px;
+}
+
+*::-webkit-scrollbar-thumb {
+  border-radius: 16px;
+  background-color: #9A9A9A;
+}
+
+*::-webkit-scrollbar-track {
+  background: #E3E3E3;
+}
+
+*,
+::before,
+::after {
+  box-sizing: border-box; /* 1 */
+  /*border-width: 0;  2 
+  border-style: solid; 2*/
+  /* border-color: theme('borderColor.DEFAULT', currentColor); 2 */
+}
+
+.chk-ring-blue-removed {
+  --tw-ring-opacity: 0;
+  --tw-ring-color: #fff !important; 
+}
+
+.chk-disabled {
+  color: #E0E0E0 !important;
+}
+
+/*
+1. Remove the margin in all browsers.
+2. Inherit line-height from `html` so users can set them as a class directly on the `html` element.
+*/
+.body{
+  position: fixed;
+  top: 8vh;
+  width: 100%;
+  height: 92vh; 
+}
+.body > div{
+  padding: 10px
+} 
+.button-padding-top{
+  padding-top: 27px;
+}
+.point-duration{
+  margin-top: 25px;
+  color: black;
+  margin-left: 30px;
+}
+.total-duration{
+  color: black;
+  font-size: 20px;
+}
+.padding-top-10{
+  padding: 10px
+}
+.fields{
+  padding: 10px;
+  height: 82vh;
+  overflow: auto;
 }
